--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
+    "bcryptjs": "^2.4.3",
     "mongodb": "^3.6.9",
     "next": "10.2.3",
+    "next-auth": "^3.25.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.4",
